# fusion-VO

./: CMakeLists.txt  README.md  package.xml
config/: fusion_vo_cfg.yaml  fusion_vo_euroc.yaml  fusion_vo_ntu.yaml  fusion_vo_tum.yaml
include/fusion_VO/: data_struct.hpp  fusion_VO.hpp  gps_measurement.hpp  imu_measurement.hpp  kalman_filter.hpp  logging.hpp  visual_odometry.hpp
launch/: fusion_vo.launch.xml
src/: VO_inference.cu  fusion_VO.cpp  gps_measurement.cpp  imu_measurement.cpp  kalman_filter.cpp  visual_odometry.cpp
weights/: readme.md
